Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI BOOL __stdcall C13_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgOptRd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgReset(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Mul(ULONG mula,ULONG mulb);
C13DRVAPI ERRVAL __stdcall C13_PlayClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_PlayConfigEx(ULONG configval,ULONG playcount,ULONG seqcount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_PlayConfigExx(ULONG configval,ULONG playaddr,ULONG playcount,ULONG seqaddr,ULONG seqcount,USHORT cardnum,HCARD handleval);
C13DRVAPI INT __stdcall C13_PlayStatus(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_PlayWrEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);
C13DRVAPI BYTE __stdcall C13_PortRd(INT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_PortWr(BYTE value,INT addrval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_ProgRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RAMRdB(ULONG addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_RAMRdL(ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RAMRdW(ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWipe(HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWipeEx(USHORT value,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTReset(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RTStatus(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RTSWDRd(INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_SchedDisplay(ULONG nummsgs,LPULONG count);
C13DRVAPI VOID __stdcall C13_SchedHook(INT index,LPVOID ptr);
C13DRVAPI ERRVAL __stdcall C13_SchedInsEnd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_SchedMaxval(LPULONG array,ULONG arraycount);
C13DRVAPI ULONG __stdcall C13_SchedMinval(LPULONG array,ULONG arraycount);
C13DRVAPI ERRVAL __stdcall C13_SerialClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);
C13DRVAPI INT __stdcall C13_SerialStatus(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_SerialWr(LPUSHORT buf,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Shl(ULONG dataval,USHORT cntval);