Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MsgIsAccessed(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgOptRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgReset(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgSWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgSWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgSWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgSWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_PlayClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_PlayConfigEx(UInt32 configval, UInt32 playcount, UInt32 seqcount, UInt16 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayConfigExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_PlayConfigExx(UInt32 configval, UInt32 playaddr, UInt32 playcount, UInt32 seqaddr, UInt32 seqcount, UInt16 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_PlayStatus(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayWrEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_PlayWrEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern byte C13_PortRd(Int32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_PortWr(byte value, Int32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_ProgRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RAMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMRdsW(ref UInt16 valueptr, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWipe(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWipeEx(UInt16 value, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWrsW(ref UInt16 valueptr, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_RAMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_RTConfigEx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTConfigExx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_RTConfigExx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTCreateListEx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RTCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTCreateListExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RTCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_RTReset(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_RTStatus(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_RTSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedBuild(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedBuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedBuildEx(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 freq, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedBuildExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedBuildExx(UInt32 frametime, Int32 nummsgs, ref UInt32 msgaddr, ref Int32 period, IntPtr buf, UInt32 bufsize, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedCalc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedCalc(ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedDisplay@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_SchedDisplay(UInt32 nummsgs, ref UInt32 count);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_SchedHook(Int32 index, IntPtr ptr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedInsEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedInsEnd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedInsMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedInsMsg(UInt32 index, ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedInsStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SchedInsStart(UInt32 frametime, UInt32 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_SchedMaxval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_SchedMinval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SerialClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SerialClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SerialConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SerialConfig(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SerialConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SerialConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SerialStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_SerialStatus(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_SerialWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_SerialWr(ref UInt16 buf, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_Shl(UInt32 dataval, UInt16 cntval);
